Added date filters to tax-profiles and invoices, added unit tests, updated openapi
