# src/controllers/invoice-controller.ts
@@ -2,6 +2,7 @@ import type { Request, Response, NextFunction } from "express";
 import InvoiceService from "../services/invoice-service.js";
 import { Currency, InvoiceStatus, Prisma } from "../generated/prisma/client.js";
 import { INVOICE_DELETED, INVOICE_NOT_FOUND } from "../utils/constants.js";
+import { getValidatedWhereDateTimeFilter } from "../utils/dates.js";
 
 class InvoiceController {
 
@@ -13,7 +14,7 @@ class InvoiceController {
   }
 
   getInvoices = async (req: Request, res: Response, _next: NextFunction) => {
-    const { taxProfileId, skip, take, status, currency } = req.query;
+    const { taxProfileId, skip, take, status, currency, gteCreatedAt, lteCreatedAt, gteUpdatedAt, lteUpdatedAt } = req.query;
     const where: Prisma.InvoiceWhereInput = {};
 
     where.taxProfile = {
@@ -22,8 +23,10 @@ class InvoiceController {
     if (taxProfileId) where.taxProfileId = String(taxProfileId);
     if (status) where.status = status as InvoiceStatus;
     if (currency) where.currency = currency as Currency;
+    where.createdAt = getValidatedWhereDateTimeFilter(gteCreatedAt, lteCreatedAt);
+    where.updatedAt = getValidatedWhereDateTimeFilter(gteUpdatedAt, lteUpdatedAt);
 
-    const invoices = await InvoiceService.findInvoices(where, Number(skip), Number(take));
+    const invoices = await InvoiceService.findInvoices(where, skip ? Number(skip) : undefined, take ? Number(take) : undefined);
     res.status(200).json({ invoices });
   }
 
