# src/controllers/tax-profile-controller.ts
@@ -2,6 +2,7 @@ import type { Request, Response, NextFunction } from "express";
 import { Prisma } from "../generated/prisma/client.js";
 import TaxProfileService from "../services/tax-profile-service.js";
 import { TAX_PROFILE_DELETED, TAX_PROFILE_NOT_FOUND } from "../utils/constants.js";
+import { getValidatedWhereDateTimeFilter } from "../utils/dates.js";
 
 class TaxProfileController {
 
@@ -13,7 +14,7 @@ class TaxProfileController {
   }
 
   getTaxProfiles = async (req: Request, res: Response, _next: NextFunction) => {
-    const { legalName, vatNumber, city, country, zipCode, skip, take } = req.query;
+    const { legalName, vatNumber, city, country, zipCode, gteCreatedAt, lteCreatedAt, gteUpdatedAt, lteUpdatedAt, skip, take } = req.query;
 
     const where: Prisma.TaxProfileWhereInput = {};
 
@@ -23,8 +24,10 @@ class TaxProfileController {
     if (city) where.city = { contains: String(city) };
     if (country) where.country = { contains: String(country) };
     if (zipCode) where.zipCode = { contains: String(zipCode) };
+    where.createdAt = getValidatedWhereDateTimeFilter(gteCreatedAt, lteCreatedAt);
+    where.updatedAt = getValidatedWhereDateTimeFilter(gteUpdatedAt, lteUpdatedAt);
 
-    const taxProfiles = await TaxProfileService.findTaxProfiles(where, Number(skip), Number(take));
+    const taxProfiles = await TaxProfileService.findTaxProfiles(where, skip ? Number(skip) : undefined, take ? Number(take) : undefined);
     res.status(200).json({ taxProfiles });
   }
 
