# src/routers/tax-profile-router.ts
@@ -100,6 +100,34 @@ const router = Router();
  *         required: false
  *         schema:
  *           type: string
+ *       - name: gteCreatedAt
+ *         in: query
+ *         required: false
+ *         schema:
+ *           type: string
+ *           format: date
+ *           example: 2025-12-27
+ *       - name: lteCreatedAt
+ *         in: query
+ *         required: false
+ *         schema:
+ *           type: string
+ *           format: date
+ *           example: 2025-12-27
+ *       - name: gteUpdatedAt
+ *         in: query
+ *         required: false
+ *         schema:
+ *           type: string
+ *           format: date
+ *           example: 2025-12-27
+ *       - name: lteUpdatedAt
+ *         in: query
+ *         required: false
+ *         schema:
+ *           type: string
+ *           format: date
+ *           example: 2025-12-27
  *     responses:
  *       200:
  *         description: The list of tax profiles
